--- a/html/privacy.html
+++ b/html/privacy.html
@@ -194,6 +194,30 @@
                     </ul>
                 </div>
             </li>
+            <li class="languageButton">
+                <div class="langNavButton">
+                    <div class="langLineTop"></div>
+                    <div class="langLineBottom"></div>
+                </div>
+                <div class="inicialLang">
+                    <i class="fas fa-globe"></i>
+                    <p class="language">
+                        Idiomas
+                    </p>
+                </div>
+                <ul class="languageList">
+                    <li><a class="PT" href=""><img src="../images/portugal.png" alt="Flag of Portugal">
+                            Português
+                        </a></li>
+                    <li><a class="ES" href=""><img src="../images/spain.png" alt="Flag of Spain">
+                            Espanhol
+                        </a>
+                    </li>
+                    <li><a class="EN" href=""><img src="../images/uk.png" alt="Flag of UK">
+                            Inglês
+                        </a></li>
+                </ul>
+            </li>
             <ul class="socials2">
                 <li class="fade-in">
                     <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
@@ -220,10 +244,10 @@
             </address>
         </a>
         <p>
-            Atendimento telefónico
+            
         </p>
         <p>
-            para emergência 24h
+            
         </p>
     </div>
 </header>
@@ -231,6 +255,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper1 wrapper1__inset4">
                 <div class="heading1 fadeIn">
                     <h2>
@@ -241,7 +266,7 @@
                     <div class="box7 fadeIn">
                         <p>
                             A sua privacidade é importante para nós. É política do Clínica Gynébe respeitar a sua privacidade em relação a qualquer informação sua que possamos recolher no site da 
-                                <a href=https://clinicagynebe.com.pt>
+                                <a href=#>
                                     Clínica Gynébe
                                 </a>
                                 , e outros sites que possuímos e operamos.
@@ -260,7 +285,7 @@
                         </p>
                         <p>
                             O nosso site pode ter links para sites externos que não são operados por nós. Esteja ciente de que não temos controle sobre o conteúdo e práticas desses sites e não podemos aceitar responsabilidade por suas respectivas 
-                                <a href='https://politicaprivacidade.com' target='_BLANK'>
+                                <a href="privacy.html" target='_BLANK'>
                                     políticas de privacidade.
                                 </a>
                         </p>
@@ -307,13 +332,6 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
-    <div class="languangeButton">
-        <a href="">
-            <i class="fas fa-globe"></i>
-            <span>PT/</span>
-            <span>EN</span>
-        </a>
-    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -350,7 +368,7 @@
         </span>. <a href="privacy.html">
             Política de Privacidade
         </a><br><a href="https://github.com/FranciscoAraujoPT">
-            Design by Francisco Araújo
+            Design por Francisco Araújo
         </a>
     </div>
 </footer>
@@ -358,7 +376,7 @@
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
-            <script src="../js/languange.js"></script>
+            <script src="../js/language.js"></script>
 </body>
 
 </html>
