--- a/html/en/agreements.html
+++ b/html/en/agreements.html
@@ -194,6 +194,30 @@
                     </ul>
                 </div>
             </li>
+            <li class="languageButton">
+                <div class="langNavButton">
+                    <div class="langLineTop"></div>
+                    <div class="langLineBottom"></div>
+                </div>
+                <div class="inicialLang">
+                    <i class="fas fa-globe"></i>
+                    <p class="language">
+                        Languages
+                    </p>
+                </div>
+                <ul class="languageList">
+                    <li><a class="PT" href=""><img src="../../images/portugal.png" alt="Flag of Portugal">
+                            Portuguese
+                        </a></li>
+                    <li><a class="ES" href=""><img src="../../images/spain.png" alt="Flag of Spain">
+                            Spanish
+                        </a>
+                    </li>
+                    <li><a class="EN" href=""><img src="../../images/uk.png" alt="Flag of UK">
+                            English
+                        </a></li>
+                </ul>
+            </li>
             <ul class="socials2">
                 <li class="fade-in">
                     <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
@@ -220,10 +244,10 @@
             </address>
         </a>
         <p>
-            24H Emergency
+            
         </p>
         <p>
-            Telephone assistance
+            
         </p>
     </div>
 </header>
@@ -231,6 +255,7 @@
                           CONTENT
 =========================================================-->
         <section id="content">
+            <div class="overlay"></div>
             <div class="wrapper6">
                 <div class="heading1 fade-in">
                     <h2>
@@ -277,7 +302,8 @@
                         <p>&brvbar Cimpor - Cimentos de Portugal, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../../images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
+                        <img src="../../images/eurovida.jpg"
+                            alt="Eurovida – Companhia de Seguros de Vida, S.A" />
                         <p>&brvbar Eurovida – Companhia de Seguros de Vida, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
@@ -297,7 +323,8 @@
                         <p>&brvbar Logo Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../../images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
+                        <img src="../../images/lusitania.png"
+                            alt="Lusitania - Companhia de Seguros, S.A." />
                         <p>&brvbar Lusitania - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
@@ -310,7 +337,8 @@
                         <p>&brvbar N Seguros, S.A</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="../../images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
+                        <img src="../../images/popular.png"
+                            alt="Popular Seguros- Companhia de Seguros, S.A. " />
                         <p>&brvbar Popular Seguros- Companhia de Seguros, S.A. </p>
                     </div>
                     <div class="insurence fade-in">
@@ -496,13 +524,6 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
-    <div class="languangeButton">
-        <a href="">
-            <i class="fas fa-globe"></i>
-            <span>PT/</span>
-            <span>EN</span>
-        </a>
-    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -548,7 +569,7 @@
             <script src="../../js/headerNavbar.js"></script>
             <script src="../../js/headerNavbarButtons.js"></script>
             <script src="../../js/buttonOnAgreements.js"></script>
-            <script src="../../js/languange.js"></script>
+            <script src="../../js/language.js"></script>
 </body>
 
 </html>
