--- a/html/en/privacy.html
+++ b/html/en/privacy.html
@@ -194,6 +194,30 @@
                     </ul>
                 </div>
             </li>
+            <li class="languageButton">
+                <div class="langNavButton">
+                    <div class="langLineTop"></div>
+                    <div class="langLineBottom"></div>
+                </div>
+                <div class="inicialLang">
+                    <i class="fas fa-globe"></i>
+                    <p class="language">
+                        Languages
+                    </p>
+                </div>
+                <ul class="languageList">
+                    <li><a class="PT" href=""><img src="../../images/portugal.png" alt="Flag of Portugal">
+                            Portuguese
+                        </a></li>
+                    <li><a class="ES" href=""><img src="../../images/spain.png" alt="Flag of Spain">
+                            Spanish
+                        </a>
+                    </li>
+                    <li><a class="EN" href=""><img src="../../images/uk.png" alt="Flag of UK">
+                            English
+                        </a></li>
+                </ul>
+            </li>
             <ul class="socials2">
                 <li class="fade-in">
                     <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
@@ -220,10 +244,10 @@
             </address>
         </a>
         <p>
-            24H Emergency
+            
         </p>
         <p>
-            Telephone assistance
+            
         </p>
     </div>
 </header>
@@ -231,6 +255,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper1 wrapper1__inset4">
                 <div class="heading1 fadeIn">
                     <h2>
@@ -241,7 +266,7 @@
                     <div class="box7 fadeIn">
                         <p>
                             Your privacy is important to us. It is Gynébe Clinic&#39;s policy to respect your privacy regarding any information we may collect about you at our website  
-                                <a href=https://clinicagynebe.com.pt>
+                                <a href=#>
                                     Clínica Gynébe
                                 </a>
                                 , and other sites that we own and operate.
@@ -260,7 +285,7 @@
                         </p>
                         <p>
                             Our website may have links to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites and cannot accept responsibility for their respective 
-                                <a href='https://politicaprivacidade.com' target='_BLANK'>
+                                <a href="privacy.html" target='_BLANK'>
                                     privacy policies.
                                 </a>
                         </p>
@@ -307,13 +332,6 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
-    <div class="languangeButton">
-        <a href="">
-            <i class="fas fa-globe"></i>
-            <span>PT/</span>
-            <span>EN</span>
-        </a>
-    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -358,7 +376,7 @@
             <script src="../../js/intersectionObservers.js"></script>
             <script src="../../js/headerNavbar.js"></script>
             <script src="../../js/headerNavbarButtons.js"></script>
-            <script src="../../js/languange.js"></script>
+            <script src="../../js/language.js"></script>
 </body>
 
 </html>
