--- a/html/index.html
+++ b/html/index.html
@@ -195,6 +195,30 @@
                     </ul>
                 </div>
             </li>
+            <li class="languageButton">
+                <div class="langNavButton">
+                    <div class="langLineTop"></div>
+                    <div class="langLineBottom"></div>
+                </div>
+                <div class="inicialLang">
+                    <i class="fas fa-globe"></i>
+                    <p class="language">
+                        Idiomas
+                    </p>
+                </div>
+                <ul class="languageList">
+                    <li><a class="PT" href=""><img src="../images/portugal.png" alt="Flag of Portugal">
+                            Português
+                        </a></li>
+                    <li><a class="ES" href=""><img src="../images/spain.png" alt="Flag of Spain">
+                            Espanhol
+                        </a>
+                    </li>
+                    <li><a class="EN" href=""><img src="../images/uk.png" alt="Flag of UK">
+                            Inglês
+                        </a></li>
+                </ul>
+            </li>
             <ul class="socials2">
                 <li class="fade-in">
                     <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
@@ -221,10 +245,10 @@
             </address>
         </a>
         <p>
-            Atendimento telefónico
+            
         </p>
         <p>
-            para emergência 24h
+            
         </p>
     </div>
 </header>
@@ -232,6 +256,7 @@
                           CONTENT
 =========================================================-->
             <section id="content">
+                <div class="overlay"></div>
                 <div class="img-container">
                     <div class="teaser">
                         <span class="first">
@@ -474,13 +499,6 @@
                           FOOTER
 =========================================================-->
             <footer id="footer">
-    <div class="languangeButton">
-        <a href="">
-            <i class="fas fa-globe"></i>
-            <span>PT/</span>
-            <span>EN</span>
-        </a>
-    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -517,7 +535,7 @@
         </span>. <a href="privacy.html">
             Política de Privacidade
         </a><br><a href="https://github.com/FranciscoAraujoPT">
-            Design by Francisco Araújo
+            Design por Francisco Araújo
         </a>
     </div>
 </footer>
@@ -526,7 +544,7 @@
                 <script src="../js/headerNavbar.js"></script>
                 <script src="../js/headerNavbarButtons.js"></script>
                 <script src="../js/scrollDown.js"></script>
-                <script src="../js/languange.js"></script>
+                <script src="../js/language.js"></script>
     </body>
 
     </html>
