--- a/html/en/privacy.html
+++ b/html/en/privacy.html
@@ -20,6 +20,16 @@
 <link rel="stylesheet" href="../../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-225478188-1">
+</script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-225478188-1');
+</script>
 </head>
 
 <body>
@@ -236,20 +246,14 @@
         </span>
         <a href="tel:00351225432135">
             <address>
-                225 432 135
+                225 432 135<sup class="phone_sup">1</sup>
             </address>
         </a>
         <a href="tel:00351915424413">
             <address>
-                915 424 413
+                915 424 413<sup class="phone_sup">2</sup>
             </address>
         </a>
-        <p>
-            
-        </p>
-        <p>
-            
-        </p>
     </div>
 </header>
         <!--========================================================
@@ -360,6 +364,14 @@
                     </a></li>
             </ul>
         </nav>
+    </div>
+    <div class="footer_phone">
+        <p><sup class="phone_sup">1</sup>
+            Call to the national fixed network
+        </p>
+        <p><sup class="phone_sup">2</sup>
+            Call to national mobile network
+        </p>
     </div>
     <div class="privacy-block fade-in">
         <a href="index.html">
