--- a/html/es/contacts_santo_tirso.html
+++ b/html/es/contacts_santo_tirso.html
@@ -20,6 +20,16 @@
 <link rel="stylesheet" href="../../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-225478188-1">
+</script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-225478188-1');
+</script>
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 </head>
@@ -238,20 +248,14 @@
         </span>
         <a href="tel:00351225432135">
             <address>
-                225 432 135
+                225 432 135<sup class="phone_sup">1</sup>
             </address>
         </a>
         <a href="tel:00351915424413">
             <address>
-                915 42413
+                915 42413<sup class="phone_sup">2</sup>
             </address>
         </a>
-        <p>
-            
-        </p>
-        <p>
-            
-        </p>
     </div>
 </header>
         <!--========================================================
@@ -272,7 +276,7 @@
                 </address>
                 <address class="contacts-address fadeIn">
                     <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135"> +351
-                            252 850 480</a></span>
+                            252 850 480</a><sup class="phone_sup">1</sup></span>
                     <span class="wrapper-info">E-mail:
                         <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
                     </span>
@@ -352,6 +356,14 @@
                     </a></li>
             </ul>
         </nav>
+    </div>
+    <div class="footer_phone">
+        <p><sup class="phone_sup">1</sup>
+            Llamada a la red fija nacional
+        </p>
+        <p><sup class="phone_sup">2</sup>
+            Llamada a la red móvil nacional
+        </p>
     </div>
     <div class="privacy-block fade-in">
         <a href="index.html">
